[gd_scene load_steps=6 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[node name="Enemigo_Ave" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="lateral" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lateral"]
shape = SubResource( 3 )

[node name="abajo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="abajo"]
shape = SubResource( 4 )

[connection signal="body_entered" from="lateral" to="." method="_on_lateral_body_entered"]
[connection signal="body_exited" from="lateral" to="." method="_on_lateral_body_exited"]
[connection signal="body_entered" from="abajo" to="." method="_on_abajo_body_entered"]
[connection signal="body_exited" from="abajo" to="." method="_on_abajo_body_exited"]
